styles.css
/* ... */
@media (max-width: 991.98px) {
  .cards-group {
    flex-direction: column;
    margin: 45px 0 0 0;
  }

  .cards-group__item {
    margin: 0 -20px;
    padding: 45px 20px 0 20px;
  }

  #hebergements {
    flex: 1;
    order: 2;
    background-color: transparent;
  }

  #populaires {
    flex: 1;
    order: 1;
    border-radius: 0;
  }

  #activites {
    margin-top: 45px;
  }
}

@media (min-width: 768px) {
  .grid-activities .cards-list__item {
    grid-column: var(--colIdx, auto);
    grid-row: var(--rowIdx, 1);
  }

  .grid-activities .cards-list__item:nth-child(3n + 1) {
    --colIdx: 1;
    height: 445px;
  }

  .grid-activities .cards-list__item:nth-child(3n + 2) {
    --colIdx: 2;
    height: 235px;
  }

  .grid-activities .cards-list__item:nth-child(3n + 3) {
    --colIdx: 2;
    --rowIdx: 4;
    height: 165px;
    margin-top: 10px;
  }

  .grid-activities .cards-list__item:nth-child(3n + 4) {
    --colIdx: 3;
  }

  .grid-activities .cards-list__item:nth-child(3n + 5) {
    --colIdx: 4;
    height: 190px;
  }

  .grid-activities .cards-list__item:nth-child(3n + 6) {
    --colIdx: 4;
    height: 210px;
    margin-top: -35px;
  }
}

@media (min-width: 768px) and (max-width: 1377.98px) {
  .grid-activities {
    min-height: 935px;
  }

  .grid-activities .cards-list__item:nth-child(3n + 4) {
    --colIdx: 2;
    margin-top: 490px;
  }

  .grid-activities .cards-list__item:nth-child(3n + 5) {
    --colIdx: 1;
    height: 190px;
    margin-top: 490px;
  }

  .grid-activities .cards-list__item:nth-child(3n + 6) {
    --colIdx: 1;
    height: 210px;
    margin-top: 455px;
  }
}

@media (max-width: 767.98px) {
  body {
    padding-top: 24px;
  }

  .header {
    /* added */
    flex-direction: column;
    /* changed */
    align-items: center;
  }

  .header__logo {
    height: 50px;
    margin-left: 0;
  }

  .header__nav {
    align-self: stretch;
    justify-content: center;

    margin-top: 24px;
  }

  .header__nav__list {
    flex: 1;
  }

  .header__nav__list-item {
    flex: 1;
  }

  .header__nav__list-item > a {
    padding: 12px 0;
    border-top: none;
    border-bottom: 2px solid #f2f2f2;
    line-height: 1;

    text-align: center;
  }

  .content {
    margin-top: 24px;
  }

  .search-input {
    max-width: 100%;
    margin-top: 32px;
  }

  .search-input__text > input {
    padding-right: 37px;
  }

  .search-input__button {
    margin-left: -15px;
    border-radius: 15px;
  }

  .search-input__button__text {
    display: none;
  }

  .search-input__button__icon {
    display: inline-block;
  }

  .filters {
    flex-direction: column;
    align-items: flex-start;
  }

  .filters__list {
    margin-top: 12px;
    margin-left: -10px;
  }

  .filters__title {
    line-height: normal;
  }

  #hebergements {
    padding-bottom: 0;
  }

  .cards-list__item {
    flex: 1 0 300px;
  }

  .cards-list__item--paysage {
    flex: 0 0 calc(100% - 24px);
    flex-direction: column;
    flex-wrap: nowrap;
  }

  .grid-activities {
    grid-auto-flow: row;
    grid-auto-rows: 190px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));

    gap: 24px;
  }

  .footer__container {
    flex-direction: column;
  }

  .footer__section {
    width: 100%;
  }

  .footer__section + .footer__section {
    margin-top: 16px;
  }
}

